--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,22 +35,28 @@ def dbflow_version = "3.0.0-beta1"
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+
     // DB
-    //    apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
-    //    compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
-    //    compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
+    apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
+    compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
+    compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
+
     // Java 8 Stream api
     compile 'com.annimon:stream:1.0.6'
+
     // Support
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
+
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+
     // Data binding
     compile 'com.jakewharton:butterknife:7.0.1'
+
     // Logging
     compile 'com.jakewharton.timber:timber:4.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
