--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vksdk"]
 	path = vksdk
-	url = git@github.com:VKCOM/vk-android-sdk.git
+  url = git@github.com:Nafanya/vk-android-sdk.git
