--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,26 +1,18 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 
-// retrolamda should be last in list
-apply plugin: 'me.tatarka.retrolambda'
-
-
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
-
-    // Use JDK 8 for retrolambda
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "io.github.nafanya.vkdocs"
-        minSdkVersion 15
+        applicationId "io.github.nafanya.docer"
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -30,16 +22,22 @@ android {
     }
 }
 
-def dbflow_version = "3.0.0-beta1"
+def dbflow_version = "3.0.0-beta3"
+def AAVersion = '3.0-SNAPSHOT'
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:1.10.19"
 
-    // DB
-    apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
-    compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
-    compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
+    androidTestCompile 'org.mockito:mockito-core:1.10.19'
+    androidTestCompile "com.google.dexmaker:dexmaker:1.2"
+    androidTestCompile "com.google.dexmaker:dexmaker-mockito:1.2"
+
+    androidTestCompile 'com.android.support:support-annotations:23.1.1'
+    androidTestCompile 'com.android.support.test:runner:0.4.1'
+    androidTestCompile 'com.android.support.test:rules:0.4.1'
+
 
     // Java 8 Stream api
     compile 'com.annimon:stream:1.0.6'
@@ -59,6 +57,15 @@ dependencies {
 
     // Logging
     compile 'com.jakewharton.timber:timber:4.1.0'
+    
     compile 'io.reactivex:rxandroid:1.1.0'
+
+    apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
+    compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
+    compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
     compile project(':vksdk_library')
+
+    //compile project(':android-pdfview')
+    //apt "com.googlecode.androidannotations:androidannotations:${AAVersion}"
+    //compile "com.googlecode.androidannotations:androidannotations-api:${AAVersion}"
 }
