--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,41 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="io.github.nafanya.vkdocs">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
-        android:name=".AndroidApplication"
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name="io.github.nafanya.vkdocs.LoginActivity">
+            <intent-filter>
+                <data android:scheme="vk5252455" />
 
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.vk.sdk.VKServiceActivity"
+            android:label="ServiceActivity"
+            android:theme="@style/VK.Transparent" />
+        <activity android:name="io.github.nafanya.vkdocs.MainActivity" />
+        <activity android:name="io.github.nafanya.vkdocs.FriendsListActivity" />
+
+        <activity
+            android:name="io.github.nafanya.vkdocs.presentation.ui.views.DocumentsActivity"
+            android:label="@string/title_activity_documents"></activity>
     </application>
 
 </manifest>
