bad design, added delete document.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "io.github.nafanya.docer"
-        minSdkVersion 16
+        applicationId "io.github.nafanya.vkdocs"
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
