--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
-
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -37,7 +36,7 @@
 
         <activity
             android:name="io.github.nafanya.vkdocs.presentation.ui.views.DocumentsActivity"
-            android:label="@string/title_activity_documents"></activity>
+            android:label="@string/title_activity_documents"/>
     </application>
 
 </manifest>
