--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="io.github.nafanya.vkdocs.LoginActivity">
+        <activity
+            android:name="io.github.nafanya.vkdocs.LoginActivity"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <data android:scheme="vk5252455" />
 
