--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             android:label="ServiceActivity"
             android:theme="@style/VK.Transparent" />
         <activity android:name=".presentation.ui.views.MainActivity" />
-        <activity android:name=".presentation.ui.views.DocumentsActivity"></activity>
+        <activity android:name=".presentation.ui.views.DocumentsActivity" />
     </application>
 
 </manifest>
