--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,10 +43,32 @@ dependencies {
     androidTestCompile "com.google.dexmaker:dexmaker:1.2"
     androidTestCompile "com.google.dexmaker:dexmaker-mockito:1.2"
 
-    androidTestCompile 'com.android.support:support-annotations:23.2.1'
+    androidTestCompile 'com.android.support:support-annotations:23.2.0'
     androidTestCompile 'com.android.support.test:runner:0.4.1'
     androidTestCompile 'com.android.support.test:rules:0.4.1'
-    
+
+
+    // Java 8 Stream api
+    compile 'com.annimon:stream:1.0.6'
+
+    // Support
+    compile 'com.android.support:support-v4:23.2.0'
+    compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.android.support:design:23.2.0'
+    compile 'com.android.support:cardview-v7:23.2.0'
+    compile 'com.android.support:recyclerview-v7:23.2.0'
+
+    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+
+    // Data binding
+    compile 'com.jakewharton:butterknife:7.0.1'
+
+    // Logging
+    compile 'com.jakewharton.timber:timber:4.1.0'
+
+    compile 'io.reactivex:rxandroid:1.1.0'
+
     apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
@@ -56,15 +78,7 @@ dependencies {
         transitive = true
     }
 
-    compile 'com.annimon:stream:1.0.6'
-    compile 'com.android.support:support-v4:23.2.1'
-    compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.android.support:design:23.2.1'
-    compile 'com.android.support:cardview-v7:23.2.1'
-    compile 'com.android.support:recyclerview-v7:23.2.1'
-    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.jakewharton.timber:timber:4.1.0'
-    compile 'io.reactivex:rxandroid:1.1.0'
+    //compile project(':android-pdfview')
+    //apt "com.googlecode.androidannotations:androidannotations:${AAVersion}"
+    //compile "com.googlecode.androidannotations:androidannotations-api:${AAVersion}"
 }
