--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".App"
@@ -35,6 +35,10 @@
             android:label="ServiceActivity"
             android:theme="@style/VK.Transparent" />
         <activity android:name=".presentation.ui.views.activities.DocumentsActivity" />
+        <activity
+            android:name=".presentation.ui.views.activities.DocumentViewerActivity"
+            android:label="@string/title_activity_document_viewer"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
