--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,8 @@ dependencies {
 
     compile 'com.felipecsl:gifimageview:2.0.0'
 
+    compile 'com.commit451:PhotoView:1.2.5'
+
     //compile project(':android-pdfview')
     //apt "com.googlecode.androidannotations:androidannotations:${AAVersion}"
     //compile "com.googlecode.androidannotations:androidannotations-api:${AAVersion}"
