--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,9 @@ dependencies {
     // Java 8 Stream api
     compile 'com.annimon:stream:1.0.6'
 
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.squareup.okhttp:okhttp:2.6.0'
+    compile 'com.github.bumptech.glide:okhttp-integration:1.3.1@aar'
 
     // Support
     compile 'com.android.support:support-v4:23.2.1'
