added custom media player

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
             android:theme="@style/AppTheme"></activity>
 
         <service
-            android:name=".presentation.services.AudioPlayerService">
+            android:name=".presentation.ui.media.AudioPlayerService">
         </service>
     </application>
 
