--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,11 +38,11 @@
         <activity
             android:name=".presentation.ui.views.activities.DocumentViewerActivity"
             android:label="@string/title_activity_document_viewer"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
 
-        <service
-            android:name=".presentation.ui.media.AudioPlayerService">
-        </service>
+        <service android:name=".presentation.ui.media.AudioPlayerService"></service>
+
+        <activity android:name=".presentation.ui.views.activities.SettingsActivity"></activity>
     </application>
 
 </manifest>
