--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
             android:name=".presentation.ui.views.activities.documents.DocumentsActivity"
             android:theme="@style/AppTheme" />
         <activity
+            android:name=".presentation.ui.views.activities.documents.DocumentsBaseActivity"
+            android:theme="@style/AppTheme" />
+        <activity
             android:name=".presentation.ui.views.activities.DocumentViewerActivity"
             android:label="@string/title_activity_document_viewer"
             android:theme="@style/AppTheme" />
