--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".presentation.ui.views.LoginActivity"
+            android:name=".presentation.ui.activities.LoginActivity"
             android:theme="@style/AppTheme.Splash">
             <intent-filter>
                 <data android:scheme="vk5252455" />
@@ -35,13 +35,13 @@
             android:label="ServiceActivity"
             android:theme="@style/VK.Transparent" />
         <activity
-            android:name=".presentation.ui.views.activities.documents.DocumentsActivity"
+            android:name=".presentation.ui.activities.documents.DocumentsActivity"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".presentation.ui.views.activities.documents.DocumentsBaseActivity"
+            android:name=".presentation.ui.activities.DocumentsBaseActivity"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".presentation.ui.views.activities.DocumentViewerActivity"
+            android:name=".presentation.ui.activities.DocumentViewerActivity"
             android:label="@string/title_activity_document_viewer"
             android:theme="@style/AppTheme" />
 
