--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,10 +35,7 @@
             android:label="ServiceActivity"
             android:theme="@style/VK.Transparent" />
         <activity
-            android:name=".presentation.ui.activities.documents.DocumentsActivity"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".presentation.ui.activities.DocumentsBaseActivity"
+            android:name=".presentation.ui.activities.DocumentsActivity"
             android:theme="@style/AppTheme" />
         <activity
             android:name=".presentation.ui.activities.DocumentViewerActivity"
