--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
 
         <service android:name=".presentation.ui.media.AudioPlayerService"/>
 
-        <activity android:name=".presentation.ui.views.activities.SettingsActivity"
+        <activity android:name=".presentation.ui.activities.SettingsActivity"
             android:parentActivityName=".presentation.ui.activities.DocumentsActivity"
             android:label="@string/title_activity_settings"
             android:theme="@style/AppTheme">
