--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,26 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'io.fabric'
 apply plugin: 'me.tatarka.retrolambda'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
 
 android {
     compileSdkVersion 23
@@ -91,4 +111,8 @@ dependencies {
     //compile project(':android-pdfview')
     //apt "com.googlecode.androidannotations:androidannotations:${AAVersion}"
     //compile "com.googlecode.androidannotations:androidannotations-api:${AAVersion}"
+
+    compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
+        transitive = true;
+    }
 }
