--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,4 +115,6 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
+
+    compile 'jp.wasabeef:recyclerview-animators:2.2.1'
 }
